2023-11-02 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/mcs51/gen.c,
	  src/mcs51/main.c,
	  support/regression/tests/bitintshift.c.in:
	  Fix bug #3634.

2023-11-02 Maarten Brock <sourceforge.brock AT dse.nl>

	* Makefile.common.in,
	* Makefile.in,
	* sdccconf_in.h: added OPT_DISABLE_R800

2023-10-28 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCpeeph.c:
	  operandsNotRelated improvements for mcs51 (and related), based on patch 1 from patch ticket #466 by Oleg Endo.
	* src/mcs51/gen.c:
	  Patch 2 from patch ticket #466 by Oleg Endo.
	* src/mcs51/peep.c,
	  src/mcs51/ralloc.c,
	  src/mcs51/ralloc.h,
	  src/mcs51/rtrack.c:
	  Patch 3 from patch ticket #466 by Oleg Endo.
	* src/mcs51/main.c:
	  Patch 6 from patch ticket #466 by Oleg Endo.
	* src/SDCCbitv.c,
	  src/SDCCbitv.h:
	  Patch 10 from patch ticket #466 by Oleg Endo.

2023-10-28 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCgenconstprop.cc:
	  Fix generalized constant propagation analysis of pointers for host with 32-bit long (bug #3667).

2023-10-26 Philipp Klaus Krause <philipp@colecovision.eu>

	* support/regression/tests/bug-3579.c,
	  support/regression/tests/bug-3606.c:
	  Fix reads from unitialized memory in regression tests, should fix bug #3583.
	* support/regression/tests/bug-3642.c:
	  Regression test for bug #3642 (disabled for now, as the bug is not yet fixed).

2023-10-19 Maarten Brock <sourceforge.brock AT dse.nl>

	* support/regression/tests/push_pop_sp.c: bug fix, remove unintended code
	* src/SDCCmem.c(printAllocInfoSeg): adjust stack offsets for struct
	  returning functions
	* src/mcs51/gen.c(genRet): fixed stack/xstack with/without framepointer

2023-10-18 Maarten Brock <sourceforge.brock AT dse.nl>

	* sdas/linksrc/lklist.c,
	* sdas/linksrc/lkmem.c,
	* sdas/linksrc/lkrloc3.c: cosmetics
	* src/SDCCglobl.h: reduced LEVEL_UNIT to 10000 for human readability
	* src/SDCCicode.c(geniCodeCall): support xstack