@@ -1,3 +1,8 @@
+2023-11-06 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* src/SDCCpeeph.c:
+	  Fix bug #3656.
+
 2023-11-02 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* src/mcs51/gen.c,
